Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.3, 6.8.2
-
None
-
-
05c8a4861 (dev), 8c88a077c (dev), 31d64b725 (6.9), cbce9bbcb (6.9), 5d90dea2a (6.8), 3f3541d49 (6.8), 507d8cc0e (dev), 55c60776e (6.9), dd45d2bb0 (6.8), b4418b6e6 (tqtc/lts-6.5), b159e9a19 (tqtc/lts-6.5), 672c60ea7 (tqtc/lts-6.5), d9145dd37 (dev)
-
Foundation Sprint 127, Foundation Sprint 128
Description
Reproducible both in C++ and (with PySide6) in Python. Here is the Python example:
In [1]: from PySide6.QtCore import QLocale
In [2]: QLocale(QLocale.English).toString(1e6, 'e')
Out[2]: '1.000000E+06'
In [3]: QLocale(QLocale.English).toString(1e6, 'g')
Out[3]: '1E+06'
Note the uppercase E. The documentation, if I understand it correctly, says that it should be lowercase, like it is in Qt5:
In [4]: from PySide2.QtCore import QLocale
In [5]: QLocale(QLocale.English).toString(1e6, 'e')
Out[5]: '1.000000e+06'
In [6]: QLocale(QLocale.English).toString(1e6, 'g')
Out[6]: '1e+06'
Attachments
Issue Links
- resulted in
-
QTBUG-134785 Provide QLocale::toString() floating-point formats for locale-appropriate case of exponent
-
- Open
-
-
QTBUG-135343 tst_qqmllocale::toString(locale.toString(123.456, 'e')) Compared values are not the same
-
- Closed
-